# livestcok_manager

./: CMakeLists.txt  README.md  README_LIVESTOCK.md  livestock_management.cpp  livestock_management.h  main.cpp
